# django-rest-boilerplate

./: .env-test  .env.sample  .gitignore  Makefile  Procfile  README.md  pyproject.toml  setup.cfg
app/: urls.py  wsgi.py
app/settings/: base.py
