[tool.poetry]
name = "django-rest-boilerplate"
version = "0.1.0"
description = ""
authors = ["Matt Wagaman <matthew.wagaman@wpromote.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.7"
psycopg2 = "^2.8.6"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
djangorestframework = "^3.12.2"
drf_yasg = "^1.20.0"
django-filter = "^2.4.0"
django-cors-headers = "^3.7.0"
django-currentuser = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
honcho = "^1.0.1"
coverage = "^5.5"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
